--- a/action.yaml
+++ b/action.yaml
@@ -40,19 +40,19 @@ runs:
       run: |
         set -x
         pushd ./src/${{ inputs.downstream-module }}
-        tags="$(grep -I  -r '// +build' . |
-                grep -v '^./vendor/' | \
-                grep -v '^./hack/' | \
-                grep -v '^./third_party' | \
-                grep -v '^./.github' | \
+        tags="$(grep -qI  -r '// +build' . |
+                grep -qv '^./vendor/' | \
+                grep -qv '^./hack/' | \
+                grep -qv '^./third_party' | \
+                grep -qv '^./.github' | \
                 cut -f3 -d' ' | \
                 tr ',' '\n' | \
                 sort | uniq | \
-                grep -v '^!' | \
+                grep -qv '^!' | \
                 `# Don't pass any of the built-in GOOS tags` \
-                grep -vE '(windows|linux|darwin)' | \
+                grep -qvE '(windows|linux|darwin)' | \
                 `# Skip the tools tag` \
-                grep -v 'tools' | \
+                grep -qv 'tools' | \
                 tr '\n' ' ')"
         echo "Building with tags: ${tags}"
         go test -vet=off -tags "${tags}" -exec echo ./...
